added floating calculator button

--- a/index.html
+++ b/index.html
@@ -132,5 +132,35 @@
     </div>
 
     <div id="map"></div>
+
+    <div class="floating-button" id="open-dialog">
+      <span>Calculator</span>
+  </div>
+
+  <!-- Dialog Container -->
+  <div class="dialog-container" id="calculator-dialog">
+      <div class="dialog">
+          <h2>Calculator</h2>
+          <form id="calculator-form">
+              <input type="number" id="input1" placeholder="Input 1" required>
+              <input type="number" id="input2" placeholder="Input 2" required>
+              <input type="number" id="input3" placeholder="Input 3" required>
+              <input type="number" id="input4" placeholder="Input 4" required>
+              <button type="submit">Calculate</button>
+          </form>
+          <div id="results">
+              <h3>Results:</h3>
+              <div id="result1"></div>
+              <div id="result2"></div>
+              <div id="result3"></div>
+              <div id="result4"></div>
+              <div id="result5"></div>
+              <div id="result6"></div>
+              <div id="result7"></div>
+              <div id="result8"></div>
+          </div>
+          <button id="close-dialog">Close</button>
+      </div>
+  </div>
   </body>
 </html>
